task-1-kubernetes/k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: dodo-app
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
