task-1-kubernetes/k8s/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dodo-app
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
