task-1-kubernetes/k8s/base/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dodo-app
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
