task-1-kubernetes/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dodo-ingress
  namespace: dodo-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dodo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
